--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Git Practice</title>
+    <title>A whale of greeting</title>
   </head>
   <body>
     <h1>Hello, world</h1>
