--- a/about.html
+++ b/about.html
@@ -10,5 +10,6 @@
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
     </p>
+    <p>This is so cool!</p>
   </body>
 </html>
