--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Hello, world</h1>
     <a href="about.html">About this project</a>
     <p>Call me Meo</p>
-    <img src="images/breaching_whale.jpg" alt="Breaching whale">
+    <img src="images/breaching_whale.jpg" alt="Gorgeous Breaching Whale">
   </body>
 </html>
