--- a/about.html
+++ b/about.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>About Us</title>
-    <!-- Add something here to fix trademark -->
   </head>
   <body>
     <h1>About Us!</h1>
@@ -12,5 +11,6 @@
       tutorial <em>Learn Enough™ Git to Be Dangerous</em>.
     </p>
     <p>This is so cool!</p>
+    <p>I fixed something! Probably.</p>
   </body>
 </html>
